# SnakeRobotics

./: .cal.cpp.swp  CMakeLists.txt  README.md  a.out  cal.cpp  cal2.py  calc.py  calc2.py  catmullrom.cpp  circle.cpp  control_keyboard.cpp  cur.py  curvature.cpp  dorsal_reference_curve.cpp  dorsal_reference_curve2.cpp  dwa.cpp  fileread.cpp  frenet_serret.cpp  frenet_serret.py  frenet_serret2.cpp  glut_main  joystick.cpp  kalman_filter.cpp  main.cpp  mpc.cpp  pra1.py  serpenoid.cpp  sinus_lifting.cpp  snake_circle.cpp  snake_circle2.cpp  snake_dwa.cpp  snake_straight.cpp  temp.cpp  vec.cpp  vec_2.cpp  vec_3.cpp
include/: dwa.h  serpenoid.h  serpenoid_sinus_lifting.h  snake.h
video/: snake_2D
